# research-analysis

./: ANOVA.py  README.md  SERanalysis.ipynb  correlation.py  eda_feat_eng.py  plots.py  pyproject.toml  surveys_cleaning.py  surveys_feat_eng.py  text_basic_features.py
data/: eda_engagement.xlsx  participant_registry.xlsx  surveys_cleaned.csv  surveys_engagement.csv  voice_engagement.xlsx
src/utils/: constants.py  files.py
