[tool.poetry]
name = "ARS"
version = "0.1.0"
authors = ["Asier Serrano Aramburu <asier.tub@gmail.com>"]
description = "ARS WiSe 24_25"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"  # Specify your Python version here
nltk = "^3.9.1"
textstat = "^0.7.4"
textblob-de = "^0.4.3"
germansentiment = "^1.1.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
editdistance = "^0.8.1"
seaborn = "^0.13.2"
scipy = "^1.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
